Fix error-tooltip left aligned

--- a/styles/sass/partials/_forms.scss
+++ b/styles/sass/partials/_forms.scss
@@ -169,7 +169,6 @@ label.error {
         padding: .2rem;
         color: $white;
         margin-bottom: -1.1rem;
-        left: 0.3rem;
         box-shadow: rgba(0, 0, 0, 0.38) 0 2px 0;
 
         &:before {
